syntax = "proto3";
import "google/protobuf/wrappers.proto";

package ecommerce;

option go_package = "./;ecommerce"; //生成go 的 pb 需要指定包名

service orderManagement {
    rpc addOrder(Order) returns (google.protobuf.StringValue);
    rpc getOrder(google.protobuf.StringValue) returns (Order);
    rpc searchOrders(google.protobuf.StringValue) returns (stream Order);
    rpc updateOrder(stream Order) returns (google.protobuf.StringValue);
    rpc processOrder(stream google.protobuf.StringValue) returns (stream CombinedShipment);
}

message Order {
    string id = 1;
    repeated string items = 2;
    string description = 3;
    float price = 4;
    string destination = 5;
}
 
message CombinedShipment {
    string id = 1;
    string name = 2;
    repeated Order orderList = 3;
}